--- a/11/styles/typography.css
+++ b/11/styles/typography.css
@@ -12,11 +12,11 @@ a {
     text-decoration: none;
 }
 
-nav {
+header nav {
     font-family: "Lucida Grande","Helvetica","Arial",sans-serif;
 }
 
-nav a {
+header nav a {
     text-decoration: none;
     font-weight: bold;
 }
