页面设计完成

--- a/11/styles/color.css
+++ b/11/styles/color.css
@@ -65,3 +65,14 @@ header nav a.here:active{
     color: #eef;
     background-color: #799;
 }
+
+
+
+input:focus {outline: none; }
+input:focus::-webkit-input-placeholder {text-indent: 100%; opacity: 0; -webkit-transition: .4s; transition: .4s; }
+input:focus::-moz-placeholder {text-indent: 100%; opacity: 0; -moz-transition: .4s; }
+input:focus:-ms-input-placeholder {text-indent: 100%; opacity: 0; -webkit-transition: .4s; transition: .4s; }
+textarea:focus {outline: none; }
+textarea:focus::-webkit-input-placeholder {text-indent: 100%; opacity: 0; -webkit-transition: .4s; transition: .4s; }
+textarea:focus::-moz-placeholder {text-indent: 100%; opacity: 0; -moz-transition: .4s; }
+textarea:focus:-ms-input-placeholder {text-indent: 100%; opacity: 0; -webkit-transition: .4s; transition: .4s; }
